# lox_interpreter_rust

./: Cargo.toml  README.md
lox_bytecode_virtual_machine/: Cargo.toml
lox_bytecode_virtual_machine/src/: chunk.rs  lib.rs  vm.rs
lox_tree_walk/: .gitignore  Cargo.toml
lox_tree_walk/src/: expr.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs
lox_tree_walk/test_lox_scripts/: add_method_class.lox  closures.lox  hello_world.lox  inheritance_simple.lox  return_value_within_init.lox  scope.lox  simple.lox  simple_class.lox  this.lox
src/: ast_printer.rs  environment.rs  expr.rs  interpreter.rs  lib.rs  lox_callable.rs  lox_error.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs  token.rs
test_lox_scripts/: callback_with_this.lox  fibonacci.lox  hi.lox  inheritance_harder.lox  init.lox  optimized_fibonacci.lox  refer_to_method_class.lox  return_within_init.lox  simple_class.lox
